<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>transmission_manager</name>
  <version>1.0.0</version>
  <description>transmission_manager is a header only class that dynamicly loades all transmission for hardware interface info. aimed to be  used in hardware interface to convert all joints commands to actuator commands and actuator states to joint states.</description>
  <maintainer email="yoav@robeecontech.com">Yoav Fekete</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>transmission_interface</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
